--- a/src/sass/components/_page-logo.scss
+++ b/src/sass/components/_page-logo.scss
@@ -2,6 +2,10 @@
   display: inline-block;
   width: 80px;
   height: 30px;
+  @media screen and (min-width: 768px) {
+    width: 128px;
+    height: 45px;
+  }
 }
 .logo-top {
   display: flex;
