добавил паршалы колабораторов

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,4 +1,5 @@
 a {
+  display: block;
   text-decoration: none;
 }
 
@@ -16,4 +17,21 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+p {
+  margin: 0;
 }
