--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,13 +1,17 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
 @import './utils/variables';
 @import './utils/mixins';
 @import './utils/visually-hidden';
 @import 'base/common';
 @import 'base/container';
+@import 'components/header';
+@import 'components/hero';
+@import 'components/description';
 @import 'components/problems.scss';
+@import 'components/method';
+@import 'components/program';
 @import 'components/features.scss';
+@import 'components/teacher';
+@import 'components/guarantee';
+@import 'components/feedback';
+@import 'components/registration';
+@import 'components/footer';
