--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,12 +6,13 @@
 // Стили для файла с примером HTML-фрагмента
 @import './base/variables';
 @import './base/visually-hidden';
+@import './base/discharge';
 
+@import './utils/mixins';
+
+@import './layout/hero';
 @import './layout/section';
 @import './layout/container';
 
 @import './components/body';
-
-
-
-
+@import './components/modal-btn';
