added style in mixins, base, placeholders

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,9 @@
  * Все паршалы подключаются сюда.
  */
 
+// Создание стилей по логике:
+// <section-name>__<item-name>
+
 // Стили для файла с примером HTML-фрагмента
 @import './utils/variables';
 @import './utils/mixins';
