--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -23,3 +23,6 @@ $color-gray: #907e82;
 // Hover effects
 $transform-function: cubic-bezier(0.4, 0, 0.2, 1);
 $time-var: 250ms;
+
+// Shadow
+$card-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
