--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -9,5 +9,49 @@ html {
 }
 
 body {
+  margin: 0;
+
+  background-color: $color-white;
+  color: $color-black;
+
   font-family: 'DM Sans', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Titan One', cursive;
+
+  margin-bottom: 0;
+  margin-top: 0;
+
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: $color-red;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 150px;
+  padding-right: 150px;
+
+  // outline: 1px solid tomato;
 }
