--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -4,14 +4,14 @@
         <div class="teacher-wrapper">
             <div class="teacher-left-side">
                 <picture class="teacher-picture">
-                    <source srcset="./images/teacher/img.webp 1x, ./images/teacher/img@2x.webp 2x" media="(min-width: 1344px)"
+                    <source srcset="/images/teacher/img.webp 1x, /images/teacher/img@2x.webp 2x" media="(min-width: 1344px)"
                         type="image/webp">
-                    <source srcset="./images/teacher/img.jpg 1x, ./images/teacher/img@2x.jpg 2x" media="(min-width: 1344px)">
-                    <source srcset="./images/teacher/img-tablet-mobile.webp 1x, ./images/teacher/img-tablet-mobile@2x.webp 2x"
+                    <source srcset="/images/teacher/img.jpg 1x, ./images/teacher/img@2x.jpg 2x" media="(min-width: 1344px)">
+                    <source srcset="/images/teacher/img-tablet-mobile.webp 1x, /images/teacher/img-tablet-mobile@2x.webp 2x"
                         media="(min-width: 320px)" type="image/webp">
-                    <source srcset="./images/teacher/img-tablet-mobile.jpg 1x, ./images/teacher/img-tablet-mobile@2x.jpg 2x"
+                    <source srcset="/images/teacher/img-tablet-mobile.jpg 1x, /images/teacher/img-tablet-mobile@2x.jpg 2x"
                         media="(min-width: 320px)">
-                    <img class="teacher-img" src="./images/teacher/img-tablet-mobile.jpg" alt="фото преподавателя по пояс">
+                    <img class="teacher-img" src="/images/teacher/img-tablet-mobile.jpg" alt="фото преподавателя по пояс">
                 </picture>
             </div>
             <div class="teacher-right-side">
