added style pages from  components in main

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,4 +10,11 @@
 @import './utils/variables';
 @import './utils/mixins';
 @import './utils/placeholders';
-@import './components/base';
+@import './components/header';
+@import './components/hero';
+@import './components/products';
+@import './components/made';
+@import './components/gallery';
+@import './components/slider';
+@import './components/work_plan';
+@import './components/footer';
