--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -4,36 +4,44 @@
             <div class="feature-list__container">
                 <ul class="feature-list list">
                     <li class="feature-list__item">
-                        <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-                            тестировании. Иначе мы вернем деньги.* 
-                        </p>
-                            <svg class="feature-list__icon" wight="22" height="30">
-                                <use href="./images/sprite.svg#icon-fire" ></use>
-                            </svg>
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+                                тестировании. Иначе мы вернем деньги.* 
+                            </p>
+                                
                     </li>
-                    <li class="feature-list">
-                        <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как
-                            30% учеников получили за сочинение 0.
-                        </p>
-                            <svg class="feature-list__icon" wight="22" height="30">
-                                <use href="./images/sprite.svg#icon-fire" ></use>
-                            </svg>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты научишься писать сочинения минимум на 10 баллов из 14. В то время как
+                                30% учеников получили за сочинение 0.
+                            </p>
+                            
                     </li>
-                    <li class="feature-list">
-                        <p class="feature-list__description">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
-                            после формирования команд.
-                        </p>
-                            <svg class="feature-list__icon" wight="22" height="30">
-                                <use href="./images/sprite.svg#icon-fire" ></use>
-                            </svg>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
+                                после формирования команд.
+                            </p>
+                            
                     </li>
-                    <li class="feature-list">
-                        <p class="feature-list__description">Команды будут сформированы, исходя из начального уровня учеников. Мы
-                            учитываем особенности каждого ученика.
-                        </p>
-                            <svg class="feature-list__icon" wight="22" height="30">
-                                <use href="./images/sprite.svg#icon-fire" ></use>
-                            </svg>
+                    <li class="feature-list__item">
+
+                        <svg class="feature-list__icon">
+                            <use href="./images/sprite.svg#icon-fire"></use>
+                        </svg>
+                            <p class="feature-list__description">Команды будут сформированы, исходя из начального уровня учеников. Мы
+                                учитываем особенности каждого ученика.
+                            </p>
+                            
                     </li>
                 </ul>
             </div>
