мобильная версия готова

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -4,6 +4,7 @@
 }
 
 .problems-wrapper {
+  position: relative;
   border: 1px solid tomato;
 
   & .problems-title {
@@ -22,28 +23,60 @@
 }
 
 .features-overlay {
+  position: absolute;
+  margin-top: 27px;
   width: 280px;
+  height: 488px;
   padding: 20px 30px;
-  background-color: $font;
+  background-color: $white-font;
+}
+.features-overlay .features-item {
+  margin-bottom: 20px;
+}
+.features-overlay .features-number {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.643;
+  letter-spacing: 0.08em;
+  color: $orange;
+}
+.features-overlay .features-text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.08em;
+  color: $dark-font;
+}
 
-  &.features-item {
+@media screen and (min-width: 767px) {
+  .problems {
+    padding: 60px 158px 177px 42px;
+
+    .problems-title {
+      font-family: $font;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 26px;
+      line-height: 130%;
+      letter-spacing: 0.03em;
+      color: $white-font;
+    }
+  }
+
+  .features-overlay {
+    display: flex;
+    width: 688px;
+    height: 330px;
+    padding: 30px 47px 26px 96px;
+  }
+  .features-overlay .features-list {
+  }
+  .features-overlay .features-item {
+    display: flex;
+    flex-wrap: wrap;
+
     margin-bottom: 20px;
-  }
-  &.features-number {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.643;
-    letter-spacing: 0.08em;
-    color: $orange;
-  }
-  &.features-text {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.43;
-    letter-spacing: 0.08em;
-    color: $dark-font;
-    border: black;
   }
 }
