Добавил CSS для мобилы, таблетки и десктопа

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,57 +2,56 @@
   <div class="reviews__container">
     <h2 class="reviews__title title">Отзывы выпускников</h2>
 
-    <div class="reviews__thumb-picture">
-      <picture class="reviews__picture">
-        <source
-          srcset="
-            ./images/reviews/img1_mobi_x1.jpg 1x,
-            ./images/reviews/img1_mobi_x2.jpg 2x
-          "
-          media="(max-width: 767px)"
-        />
+    <div class="reviews__thumb-card">
+      <div class="reviews__thumb-picture">
+        <picture class="reviews__picture">
+          <source
+            srcset="
+              ./images/reviews/img1_mobi_x1.jpg 1x,
+              ./images/reviews/img1_mobi_x2.jpg 2x
+            "
+            media="(max-width: 767px)"
+          />
 
-        <source
-          srcset="
-            ./images/reviews/img1_tablet_x1.jpg 1x,
-            ./images/reviews/img1_tablet_x1.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
+          <source
+            srcset="
+              ./images/reviews/img1_tablet_x1.jpg 1x,
+              ./images/reviews/img1_tablet_x2.jpg 2x
+            "
+            media="(min-width: 768px)"
+          />
 
-        <img
-          src="./images/reviews/img1_mobi_x1.jpg"
-          alt="Фото выпускника"
-        />
-      </picture>
+          <img src="./images/reviews/img1_mobi_x1.jpg" alt="Фото выпускника" />
+        </picture>
 
-      <a class="link" href="#">
-        <svg width="30px" height="30px">
-          <use href="./images/sprite.svg#icon-vk"></use>
-        </svg>
-      </a>
-    </div>
-    <div class="reviews__thumb-info">
-      <h3 class="reviews__name">Тоня Кучеровская</h3>
-      <p class="reviews__education">
-        Выпуск 2015-го года, Національний університет біоресурсів і
-        природокористування України
-      </p>
-      <p class="reviews__opinion">
-        За короткий час занять з Оленою я опанувала граматику і поповнила
-        свій зовсім пустий словниковий запас. З першого ж заняття я
-        зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями,
-        тому що її справді хвилювала моя успішність. Вона стала для мене
-        авторитетом, проте я не тремтіла на уроках, маючи страх зробити
-        найменшу помилку. Зараз я можу похизуватись тим, що я студен ...
-        <a href="#">Читать дальше</a>
-      </p>
+        <a class="reviews__link link" href="#">
+          <svg width="30px" height="30px">
+            <use href="./images/sprite.svg#icon-vk"></use>
+          </svg>
+        </a>
+      </div>
+      <div class="reviews__thumb-info">
+        <h3 class="reviews__name">Тоня Кучеровская</h3>
+        <p class="reviews__education">
+          Выпуск 2015-го года, Національний університет біоресурсів і
+          природокористування України
+        </p>
+        <p class="reviews__opinion">
+          За короткий час занять з Оленою я опанувала граматику і поповнила свій
+          зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що
+          знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+          справді хвилювала моя успішність. Вона стала для мене авторитетом,
+          проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
+          Зараз я можу похизуватись тим, що я студен ...
+          <a class="reviews__opinion-link" href="#">Читать дальше</a>
+        </p>
+      </div>
     </div>
 
     <div class="reviews__slider">
       <ul class="reviews__list list">
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -77,7 +76,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -103,7 +102,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -129,7 +128,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -147,7 +146,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -165,7 +164,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -183,7 +182,7 @@
           </button>
         </li>
         <li class="reviews__item">
-          <button class="reviews__button button">
+          <button class="reviews__button">
             <picture>
               <source
                 srcset="
@@ -201,18 +200,12 @@
           </button>
         </li>
       </ul>
-      <button
-        type="button"
-        class="reviews__arrow reviews__arrow--left button"
-      >
+      <button type="button" class="reviews__arrow reviews__arrow--left">
         <svg width="25px" height="25px">
           <use href="./images/sprite.svg#icon-arrow_left"></use>
         </svg>
       </button>
-      <button
-        type="button"
-        class="reviews__arrow reviews__arrow--right button"
-      >
+      <button type="button" class="reviews__arrow reviews__arrow--right">
         <svg width="25px" height="25px">
           <use href="./images/sprite.svg#icon-arrow_right"></use>
         </svg>
