added _base.scss in main

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './utils/variables';
 @import './utils/mixins';
 @import './utils/placeholders';
+@import './components/base';
 @import './components/header';
 @import './components/hero';
 @import './components/products';
