--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,13 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './utils/variables';
+@import './utils/base';
+
+@import './components/page-header';
+@import './components/hero';
+@import './components/products';
+@import './components/benefits';
+@import './components/testimonials';
+@import './components/contacts';
+@import './components/page-footer';
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
