--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,82 +1,103 @@
-<section class="container">
-  <h2>Отзывы выпускников</h2>
-  <button class="review__button">
-    <svg width="20">
-      <use href="./images/icon/sprite.svg#icon-arrow-left"></use>
-    </svg>
-  </button>
-  <ul>
-    <li>
-      <picture>
-        <source srcset="./images/review/img1-tx1.webp 1x, ./images/review/img1-tx2.webp 2x" media="(min-width: 768px)" type="image/webp">
-        <source srcset="./images/review/img1-tx1.png 1x, ./images/review/img1-tx2.png 2x" media="(min-width: 768px)" type="image/png">
-        <source srcset="./images/review/img1-mx1.webp 1x, ./images/review/img1-mx2.webp 2x" type="image/webp">
-        <img  src="./images/review/img1-mx1.png" srcset="./images/review/img1-mx2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-      <a href="#">
-        <svg width="30" height="30">
-          <use href="./images/icon/sprite.svg#icon-vk"></use>
-        </svg>
-      </a>      
-      <h3>Тоня Кучеровская</h3>
-      <p>Выпуск 2015-го года, Національний університет біоресурсів
-      і природокористування України</p>
-      <p>За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж
-      заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя
-      успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз
-      я можу похизуватись тим, що я студен ...
-        <a href="#">Читать дальше</a>
-      </p>
-    </li>
-  </ul>
-  <ul>
-    <li>
-      <picture>
-        <source srcset="./images/review/img2-x1.webp 1x, ./images/review/img2-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img2-x1.png" srcset="./images/review/img2-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img3-x1.webp 1x, ./images/review/img3-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img3-x1.png" srcset="./images/review/img3-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img4-x1.webp 1x, ./images/review/img4-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img4-x1.png" srcset="./images/review/img4-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img5-x1.webp 1x, ./images/review/img5-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img5-x1.png" srcset="./images/review/img5-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img6-x1.webp 1x, ./images/review/img6-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img6-x1.png" srcset="./images/review/img6-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img1-x1.webp 1x, ./images/review/img1-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img1-x1.png" srcset="./images/review/img1-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-    <li>
-      <picture>
-        <source srcset="./images/review/img7-x1.webp 1x, ./images/review/img7-x2.webp 2x" type="image/webp">
-        <img src="./images/review/img7-x1.png" srcset="./images/review/img7-x2.png 2x" alt="Тоня Кучеровская">
-      </picture>
-    </li>
-  </ul>
-  <button class="review__button">
-    <svg width="20">
-      <use href="./images/icon/sprite.svg#icon-arrow-right"></use>
-    </svg>
-  </button>
-  </ul>
+<section class="container review">
+  <div class="review__section">
+    <h2 class="review__title">Отзывы выпускников</h2>
+      <ul class="review__comments">
+      <li class="review__comment">
+        <picture>
+          <source srcset="./images/review/img1-tx1.webp 1x, ./images/review/img1-tx2.webp 2x" media="(min-width: 768px)"
+            type="image/webp">
+          <source srcset="./images/review/img1-tx1.png 1x, ./images/review/img1-tx2.png 2x" media="(min-width: 768px)"
+            type="image/png">
+          <source srcset="./images/review/img1-mx1.webp 1x, ./images/review/img1-mx2.webp 2x" type="image/webp">
+          <img class="reviw__student-picture" src="./images/review/img1-mx1.png"
+            srcset="./images/review/img1-mx2.png 2x" alt="Тоня Кучеровская">
+        </picture>
+        <a class="review__student-contact" href="#">
+          <svg width="30" height="30">
+            <use href="./images/icon/sprite.svg#icon-vk"></use>
+          </svg>
+        </a>
+        <h3 class="review__student-name">Тоня Кучеровская</h3>
+        <p class="review__student-eduction">Выпуск 2015-го года, Національний університет біоресурсів
+          і природокористування України</p>
+        <p class="review__student-comment">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім
+          пустий словниковий запас. З першого ж
+          заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя
+          успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку.
+          Зараз
+          я можу похизуватись тим, що я студен ...
+          <a class="review__comment-more" href="#">Читать дальше</a>
+        </p>
+      </li>
+    </ul>
+    <button class="review__button review__button--left" type="button">
+      <svg width="20" height="14">
+        <use href="./images/icon/sprite.svg#icon-arrow-left"></use>
+      </svg>
+    </button>
+    <ul class="review__students-list">
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img2-x1.webp 1x, ./images/review/img2-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img2-x1.png" srcset="./images/review/img2-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img3-x1.webp 1x, ./images/review/img3-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img3-x1.png" srcset="./images/review/img3-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img4-x1.webp 1x, ./images/review/img4-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img4-x1.png" srcset="./images/review/img4-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img5-x1.webp 1x, ./images/review/img5-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img5-x1.png" srcset="./images/review/img5-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img6-x1.webp 1x, ./images/review/img6-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img6-x1.png" srcset="./images/review/img6-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img1-x1.webp 1x, ./images/review/img1-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img1-x1.png" srcset="./images/review/img1-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+      <li class="review__student">
+        <button class="review__student-button">
+          <picture>
+            <source srcset="./images/review/img7-x1.webp 1x, ./images/review/img7-x2.webp 2x" type="image/webp">
+            <img src="./images/review/img7-x1.png" srcset="./images/review/img7-x2.png 2x" alt="Тоня Кучеровская">
+          </picture>
+        </button>
+      </li>
+    </ul>
+    <button class="review__button review__button--right" type="button">
+      <svg width="20" height="14">
+        <use href="./images/icon/sprite.svg#icon-arrow-right"></use>
+      </svg>
+    </button>
+    </ul>
+  </div>
 </section>
