Обновила стили формы
планшет и десктоп

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,23 +1,23 @@
-<section class="form">
+<section class="section-form">
     <div class="container">
-        <form action="#" class="registration">
-            <b class="registration__header">
+        <form action="#" class="registration-form">
+            <b class="registration-form__header">
                 Регистрация на <span class="text__accent">бесплатную</span> телефонную <span
                     class="text__accent">консультацию</span> по
                 нюансам ЗНО
                 по английскому языку
             </b>
-            <p class="registration__description">
-                Оставь заявку на участие в <span class="text__accent">бесплатном занятии</span>. <br>
+            <p class="registration-form__description">
+                Оставь заявку на участие в <span class="text__accent">бесплатном занятии.</span> <br>
                 С вами свяжется консультант и ответит на вопросы.
             </p>
-            <label class="registration__field">
-                <input type="text" name="user-name" class="registration__input" placeholder="Имя*">
+            <label class="registration-form__field">
+                <input type="text" name="user-name" class="registration-form__input" placeholder="Имя*">
             </label>
-            <label class="registration__field">
-                <input type=" tel" name="user-tel" class="registration__input" placeholder="Телефон*">
+            <label class="registration-form__field">
+                <input type=" tel" name="user-tel" class="registration-form__input" placeholder="Телефон*">
             </label>
-            <button type="submit" class="registration__btn">хочу на бесплатное занятие</button>
+            <button type="submit" class="registration-form__btn">хочу на бесплатное занятие</button>
         </form>
     </div>
 </section>
