--- a/src/sass/components/_garant.scss
+++ b/src/sass/components/_garant.scss
@@ -20,12 +20,19 @@
   padding-bottom: 20px;
 }
 .feature-list__item {
-  outline: 1px solid red;
   display: flex;
-  //   justify-content: space-between;
+}
+.feature-list__item:first-child::before {
+  display: flex;
+
+  //   content: '';
+  //   height: 1px;
+  //   width: 60px;
+  //   background: url(../icon/dash_dott_line);
 }
 .feature-list__description {
   display: flex;
+  margin-left: 20px;
 }
 .feature-list__icon {
   max-width: 15px;
