--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,8 @@
 <section class="container review">
   <div class="review__section">
     <h2 class="review__title">Отзывы выпускников</h2>
-      <ul class="review__comments">
-      <li class="review__comment">
+      <ul class="review__cards">
+      <li class="review__card">
         <picture>
           <source srcset="./images/review/img1-tx1.webp 1x, ./images/review/img1-tx2.webp 2x" media="(min-width: 768px)"
             type="image/webp">
