--- a/src/sass/layouts/_reviews.scss
+++ b/src/sass/layouts/_reviews.scss
@@ -28,11 +28,16 @@
 .review__title {
   @include font($font, normal, 800, 20px, 1.3);
   letter-spacing: 0.03em;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.review__card {
+  padding: 20px 20px 30px;
+  margin: 0 auto 20px;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
 
 .reviw__student-picture {
-  // margin-bottom: 20px;
   margin: 0 auto 20px;
 }
 
@@ -59,8 +64,6 @@
 .review__student-comment {
   @include font($font, normal, 500, 12px, 1.67);
   color: $sec-light-font;
-  // margin-bottom: 50px;
-  margin: 0 20px 50px;
 }
 
 .review__comment-more {
