--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,6 @@
 <h1>Hero</h1>
+<!-- <a href="" class="clients__link">
+  <svg class="icon" width="12" height="12">
+    <use href="./images/sprite.svg#arrow-right"></use>
+  </svg>
+</a> -->
