Adds styles to the page-footer (mobile).

--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -22,11 +22,13 @@
             <picture>
                 <source srcset="./images/footer/instagram.png 1x, 
                     ./images/footer/instagram@2x.png 2x">
-                <img src="./images/footer/instagram.png" alt="Instagram">
+                <img class="socials-icon" src="./images/footer/instagram.png" alt="Instagram">
             </picture>
         </a>
     </div>
-    <div class="footer-rights">
+</div>
+<div class="footer-rights container">
+    <div class="rights-container">
         <p class="footer-rights-text">&#64; Все права защищены, 2019</p>
     </div>
 </div>
