--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -14,7 +14,7 @@
             для написани сочинения</p>
         </li>
         <li class="problems-item">
-            <p class="problems-description">Подготовка в<br> одиночку</p>
+            <p class="problems-description">Подготовка в одиночку</p>
         </li>
         <li class="problems-item">
             <p class="problems-description">Отсутствие единого ресурса знаний</p>
