--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -34,7 +34,7 @@
 .problems-item::before {
   counter-increment: section;
   content: '—  0' counter(section);
-  @include font(700, 14px, 1.2);
+  @include font(700, 20px, 1.2);
   letter-spacing: 0.08em;
   color: #ff6b09;
   margin: 0;
@@ -69,6 +69,7 @@
     max-width: 688px;
     height: 303px;
   }
+
   .problems-item {
     width: calc(100% / 2);
   }
@@ -80,5 +81,36 @@
     margin-bottom: 0;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1344px) {
+  .problems-section {
+    padding-top: 100px;
+  }
+  .problems {
+    height: 560px;
+  }
+  .problems-title {
+    @include font(800, 46px, 1.3);
+    margin-bottom: 70px;
+  }
+  .problems-list {
+    display: flex;
+    flex-wrap: wrap;
+    // justify-content: space-between;
+    align-items: center;
+    padding-top: 70px;
+    padding-bottom: 60px;
+
+    padding-left: 114px;
+    padding-right: 112px;
+    max-width: 1314px;
+    height: 362px;
+  }
+  .problems-item {
+    width: 336px;
+    height: 56px;
+  }
+  .problems-description {
+    padding-top: 10px;
+    margin-bottom: 32px;
+  }
 }
