--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -6,25 +6,6 @@
   margin-left: auto;
   margin-right: auto;
   background-color: #7a7a7a;
-  background-image: url('./images/hero-bg.png'), url('./images/hero-img.jpg');
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .hero {
-    background-image: url('./images/hero-bg.png'), url('./images/hero-img.jpg');
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url('../images/hero/bg-mobile@2x.jpg');
-  }
 }
 
 .btn-orange {
@@ -43,4 +24,8 @@
   border: transparent;
 
   transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-points {
+  color: var(--accent-color);
 }
