fix feedback  css

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -26,6 +26,7 @@
   --b-white: #ffffff;
   /*text color*/
   --txt-dark: #111518;
+  --txt-dark-grey: #3d3d3d;
   --txt-grey: #b9b9b9;
   --txt-light: #ffffff;
   --txt-orange: #ff6b09;
@@ -35,7 +36,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1,
@@ -76,20 +77,17 @@ a {
   padding: 0 16px;
   margin: 0 auto;
 }
-
 @media screen and (min-width: 320px) {
   .container {
     max-width: 320px;
   }
 }
-
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
     padding: 0 38px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1386px;
@@ -106,4 +104,229 @@ a {
     padding-bottom: 130px;
   }
 }
-/*# sourceMappingURL=main.css.map */
+.advantages-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.advantages-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.429;
+  letter-spacing: 0.08em;
+  width: 146px;
+}
+
+.advantages-icon {
+  margin-right: 15px;
+}
+
+.advantages-icon-desk {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .section.container {
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+
+  .advantages-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .advantages-item:not(:last-child) {
+    margin-right: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-icon {
+    display: none;
+  }
+
+  .advantages-icon-desk {
+    display: block;
+  }
+
+  .advantages-text {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.65;
+    letter-spacing: 0.08em;
+    width: 100%;
+  }
+
+  .advantages-icon-desk {
+    margin-right: -15px;
+  }
+}
+.warranty {
+  background-color: var(--b-middle);
+}
+.warranty-title {
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 1.307;
+  letter-spacing: 0.03em;
+  color: #3d3d3d;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.warranty-list {
+  padding: 30px 20px 31px 20px;
+  width: 320px;
+  margin: auto;
+}
+.warranty-item {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.03em;
+  color: var(--txt-dark);
+  text-align: start;
+}
+.warranty-item:not(:last-child) {
+  margin-bottom: 23px;
+}
+.warranty-orange-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.03em;
+  color: var(--txt-orange);
+  text-align: start;
+}
+
+.section.warranty-corect {
+  padding-bottom: 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .warranty-corect .container {
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+  }
+}
+.feedback.section {
+  padding: 50px 20px;
+}
+.feedback-content {
+  -webkit-box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+          box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+  padding: 20px 20px 30px 20px;
+  margin-bottom: 20px;
+}
+.feedback-title {
+  font-weight: 800;
+  font-size: 19px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.feedback-picture {
+  width: 90px;
+  height: 90px;
+  margin: 0 auto 20px auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.feedback-icon {
+  width: 20px;
+  height: 20px;
+  display: block;
+  margin: 0 auto 20px auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.feedback-username {
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  text-align: center;
+  color: var(--txt-orange);
+  margin-bottom: 10px;
+}
+.feedback-text-light {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  text-align: center;
+  color: var(--txt-grey);
+  margin-bottom: 10px;
+}
+.feedback-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  text-align: center;
+  color: #3d3d3d;
+  margin-bottom: 10px;
+}
+.feedback-text-orange {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.08em;
+  text-align: center;
+  color: var(--txt-orange);
+  text-decoration: underline;
+}
+.feedback-gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.feedback-gallery-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.feedback-arrow {
+  height: 25px;
+}
+.feedback-gallery-icon {
+  width: 54px;
+}
+
+.hide-pic {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  br {
+    display: none;
+  }
+
+  .hide-pic {
+    display: block;
+  }
+}/*# sourceMappingURL=main.css.map */
