шрифт+контейнер+база

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,15 +1,8 @@
-// body {
-//   font-family: 'Roboto', sans-serif;
-//   font-weight: 400;
-//   letter-spacing: 0.03em;
-//   background-color: var(--primary-background-color);
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
 
-//   animation-duration: 1000ms;
-
-//   &.modal-open {
-//     overflow: hidden;
-//   }
-// }
 a {
   text-decoration: none;
 }
