--- a/src/sass/base/_containers.scss
+++ b/src/sass/base/_containers.scss
@@ -1,16 +1,16 @@
 .container {
   margin: 0 auto;
-  padding: 0 20px;
+  // padding: 0 20px;
 
-  @media screen and(min-width: 480px) and (max-width: 767px) {
-    width: 480px;
+  @media screen and(min-width: 320px) and (max-width: 767px) {
+    width: 320px;
   }
-  @media screen and(min-width: 768px) and (max-width: 1199px) {
+  @media screen and(min-width: 768px) and (max-width: 1687px) {
     width: 768px;
-    padding: 0 40px;
+    // padding: 0 40px;
   }
-  @media screen and(min-width: 1200px) {
-    width: 1200px;
-    padding: 0 183px;
+  @media screen and(min-width: 1688px) {
+    width: 1688px;
+    // padding: 0 183px;
   }
 }
