add css for footer and gallery

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,15 +26,18 @@
     </div>
 </section>
 <footer>
-    <div>
+    <div class="footer-white">
         <span class="logo"> </span>
-        <svg>
-            <use></use>
-        </svg>
-        <span class="phone">+38 (000) 000 00 00</span>
+        <div class="phone-groupe">
+            <svg class="phone">
+                <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
+            </svg>
+            <span class="phone-number">+38 (000) 000 00 00</span>
+        </div>
+        <img src="./images/instagram.jpg" alt="instagram" width="40" height="40">
     </div>
-    <div>
-        <span>
+    <div class="footer-black">
+        <span class="footer-text">
             @ Все права защищены, 2019
         </span>
     </div>
