--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,7 +6,7 @@
                 <img class="feedback-picture" src="./images/reviews-mobile-1.jpg" alt="Тоня Кучеровская" width="90"
                     height="90">
                 <svg class="feedback-icon">
-                    <use width="20" height="20"></use>
+                    <use href="./images/sprite.svg#icon-reviews-vk" width="20" height="20"></use>
                 </svg>
             </div>
             <div class="feedback-righr-part"></div>
@@ -31,37 +31,37 @@
 
             </ul>
         </div>
-    </div>
-    <div class="feedback-gallery">
-        <svg class="feedback-arrow">
-            <use href="./images/sprite.svg#icon-reviews-arrow-left" width="25" height="14"></use>
-        </svg>
-        <ul class="feedback-gallery-list">
-            <li class="feedback-gallery-item">
-                <img class="feedback-gallery-icon" src="./images/reviews-2.jpg" alt="фото студента 1" srcset="">
-            </li>
-            <li class="feedback-gallery-item">
-                <img class="feedback-gallery-icon" src="./images/reviews-3.jpg" alt="фото студента 2" srcset="">
-            </li>
-            <li class="feedback-gallery-item">
-                <img class="feedback-gallery-icon" src="./images/reviews-4.jpg" alt="фото студента 3" srcset="">
-            </li>
-            <li class="feedback-gallery-item hide-pic">
-                <img class="feedback-gallery-icon" src="./images/reviews-5.jpg" alt="фото студента 4" srcset="">
-            </li>
-            <li class="feedback-gallery-item hide-pic">
-                <img class="feedback-gallery-icon" src="./images/reviews-6.jpg" alt="фото студента 5" srcset="">
-            </li>
-            <li class="feedback-gallery-item hide-pic">
-                <img class="feedback-gallery-icon" src="./images/reviews-7.jpg" alt="фото студента 6" srcset="">
-            </li>
-            <li class="feedback-gallery-item hide-pic">
-                <img class="feedback-gallery-icon" src="./images/reviews-8.jpg" alt="фото студента 7" srcset="">
-            </li>
-        </ul>
-        <svg class="feedback-arrow">
-            <use href="./images/sprite.svg#icon-reviews-arrow-right" width="25" height="14"></use>
-        </svg>
-    </div>
+
+        <div class="feedback-gallery">
+            <svg class="feedback-arrow">
+                <use href="./images/sprite.svg#icon-reviews-arrow-left" width="25" height="14"></use>
+            </svg>
+            <ul class="feedback-gallery-list">
+                <li class="feedback-gallery-item">
+                    <img class="feedback-gallery-icon" src="./images/reviews-2.jpg" alt="фото студента 1" srcset="">
+                </li>
+                <li class="feedback-gallery-item">
+                    <img class="feedback-gallery-icon" src="./images/reviews-3.jpg" alt="фото студента 2" srcset="">
+                </li>
+                <li class="feedback-gallery-item">
+                    <img class="feedback-gallery-icon" src="./images/reviews-4.jpg" alt="фото студента 3" srcset="">
+                </li>
+                <li class="feedback-gallery-item hide-pic">
+                    <img class="feedback-gallery-icon" src="./images/reviews-5.jpg" alt="фото студента 4" srcset="">
+                </li>
+                <li class="feedback-gallery-item hide-pic">
+                    <img class="feedback-gallery-icon" src="./images/reviews-6.jpg" alt="фото студента 5" srcset="">
+                </li>
+                <li class="feedback-gallery-item hide-pic">
+                    <img class="feedback-gallery-icon" src="./images/reviews-7.jpg" alt="фото студента 6" srcset="">
+                </li>
+                <li class="feedback-gallery-item hide-pic">
+                    <img class="feedback-gallery-icon" src="./images/reviews-8.jpg" alt="фото студента 7" srcset="">
+                </li>
+            </ul>
+            <svg class="feedback-arrow">
+                <use href="./images/sprite.svg#icon-reviews-arrow-right" width="25" height="14"></use>
+            </svg>
+        </div>
     </div>
 </section>
