--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -300,6 +300,12 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .feedback-gallery-list {
   display: -webkit-box;
@@ -311,10 +317,14 @@ a {
           flex-direction: row;
 }
 .feedback-arrow {
-  height: 25px;
+  width: 25px;
+  height: 13px;
 }
 .feedback-gallery-icon {
   width: 54px;
+}
+.feedback-gallery-item:not(:nth-child(3n)) {
+  margin-right: 10px;
 }
 
 .hide-pic {
@@ -329,4 +339,62 @@ a {
   .hide-pic {
     display: block;
   }
+}
+.footer-white {
+  height: 199px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.footer-black {
+  height: 70px;
+  background-color: var(--b-dark);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.05em;
+  color: var(--txt-grey);
+}
+
+.phone {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.phone-number {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+}
+.phone-groupe {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
 }/*# sourceMappingURL=main.css.map */
