--- a/src/partials/programm.html
+++ b/src/partials/programm.html
@@ -1,121 +1,121 @@
-<section>
-    <div>
-        <h2>
+<section class="program__section">
+    <div class="container">
+        <h2 class="program__title" >
             Наша программа
         </h2>
-        <ul>
-            <li>1 семестр
-                <ul>
-                    <li>
+        <ul class="program__items">
+            <li class="program__item">1 семестр
+                <ul class="program__item-semester">
+                    <li class="program__item-grammar">
                         Grammar
-                        <ul>
-                            <li>Nouns & Articles </li>
-                            <li>Adjectives & Adverb</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item">Nouns & Articles </li>
+                            <li class="program__topics-item">Adjectives & Adverb</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-vocabulary"> 
                         Vocabulary
-                        <ul>
-                            <li>Family & Relations </li>
-                            <li>People & Society</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item">Family & Relations </li>
+                            <li class="program__topics-item">People & Society</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li>2 семестр
-                <ul>
-                    <li>
+            <li class="program__item">2 семестр
+                <ul class="program__item-semester">
+                    <li class="program__item-grammar">
                         Grammar
-                        <ul>
-                            <li>Pronouns </li>
-                            <li>Active Voice</li>
-                            <li>Passive Voice</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item">Pronouns </li>
+                            <li class="program__topics-item">Active Voice</li>
+                            <li class="program__topics-item">Passive Voice</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-vocabulary">
                         Vocabulary
-                        <ul>
-                            <li> Home</li>
-                            <li>School</li>
-                            <li>Work</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item"> Home</li>
+                            <li class="program__topics-item">School</li>
+                            <li class="program__topics-item">Work</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li>3 семестр
-                <ul>
-                    <li>
+            <li class="program__item">3 семестр
+                <ul class="program__item-semester">
+                    <li class="program__item-grammar">
                         Grammar
-                        <ul>
-                            <li> Home</li>
-                            <li>School</li>
-                            <li>Work</li>
-                            <li>Participle: 1, 2</li> 
+                        <ul class="program__topics">
+                            <li class="program__topics-item"> Home</li>
+                            <li class="program__topics-item">School</li>
+                            <li class="program__topics-item">Work</li>
+                            <li class="program__topics-item">Participle: 1, 2</li> 
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-vocabulary">
                         Vocabulary
-                        <ul>
-                            <li>Travel & Tourism</li>
-                            <li>Culture & Free Time</li>
-                            <li>Sport</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item">Travel & Tourism</li>
+                            <li class="program__topics-item">Culture & Free Time</li>
+                            <li class="program__topics-item">Sport</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-writing">
                         Writing
-                        <ul>
-                            <li>Informal Letter</li>
+                        <ul class="program__topics">
+                            <li class="program__topics-item">Informal Letter</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li>4 семестр
-                <ul>
-                    <li>
+            <li class="program__item">4 семестр
+                <ul class="program__item-semester">
+                    <li class="program__item-grammar">
                         Grammar
-                        <ul>
-                            <li>Clauses: Conditional and Wishes</li>
-                            <li>Direct / Reported speech</li>
-                            <li>Preposition</li>
-                            <li>Conjunction</li> 
-                            <li>Numeral</li>
+                        <ul class="program__topics">
+                            <liclass="program__topics-item">Clauses: Conditional and Wishes</li>
+                            <liclass="program__topics-item">Direct / Reported speech</li>
+                            <liclass="program__topics-item">Preposition</li>
+                            <liclass="program__topics-item">Conjunction</li> 
+                            <liclass="program__topics-item">Numeral</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-vocabulary">
                         Vocabulary
-                        <ul>
-                            <li>Healthy Living</li>
-                            <li>Nature & Environment</li>
-                            <li>Money</li>
+                        <ul class="program__topics">
+                            <liclass="program__topics-item">Healthy Living</li>
+                            <liclass="program__topics-item">Nature & Environment</li>
+                            <liclass="program__topics-item">Money</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="program__item-writing">
                         Writing
-                        <ul>
-                            <li>Formal Letter</li>
+                        <ul class="program__topics">
+                            <liclass="program__topics-item">Formal Letter</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li>5 семестр
-                <ul>
-                    <li>Revision</li>
-                    <li>Tests</li>
+            <li class="program__item">5 семестр
+                <ul class="program__item-results">
+                    <li class="program__topics-item">Revision</li>
+                    <li class="program__topics-item">Tests</li>
                 </ul>
             </li>
         </ul>
-    </div>
-    <div>
-        <h3>
-            Почему нас выбирают
-        </h3>
-        <ul>
-            <li> 01 <p>Обучение в малых командах</p></li>
-            <li> 02 <p>Визуализированные конспекты</p></li>
-            <li> 03 <p>Каждое занятие имеет цель и конкретный результат</p></li>
-            <li> 04 <p>Ревльные результаты преподавателя</p></li>
-            <li> 05 <p>Прогамма курса соответствует требованиям МОН Украины</p></li>
-            <li> 06 <p>Набор команд по уровням знаний</p></li>
-        </ul>
+        <div class="program__dignity">
+            <h3 class="program__subtitle">
+                Почему нас выбирают
+            </h3>
+            <ul class="program__dignity-items">
+                <li class="program__dignity-item"> 01 <p>Обучение в малых командах</p></li>
+                <li class="program__dignity-item"> 02 <p>Визуализированные конспекты</p></li>
+                <li class="program__dignity-item"> 03 <p>Каждое занятие имеет цель и конкретный результат</p></li>
+                <li class="program__dignity-item"> 04 <p>Ревльные результаты преподавателя</p></li>
+                <li class="program__dignity-item"> 05 <p>Прогамма курса соответствует требованиям МОН Украины</p></li>
+                <li class="program__dignity-item"> 06 <p>Набор команд по уровням знаний</p></li>
+            </ul>
+        </div>
     </div>
 </section>
